syntax = "proto3";

package product;

message ProductById {
  string id = 1;
}

message Product {
  string id = 1;
  string name = 2;
  float price = 3;
}

message createProduct {
  string name = 1;
  float price = 2;
}

message getAllProductsResponse {
   repeated Product products = 1;
}

message Empty {}

service ProductsService {
  // RPC to find a single product by ID
  rpc FindOne (ProductById) returns (Product) {}

  // RPC to find multiple products by a search query
  rpc FindMany (Empty) returns (getAllProductsResponse) {}

  // RPC to create product data
  rpc CreateProduct (createProduct) returns (Product) {}

}

